[package]
name = "linux_backup"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4"
indicatif = "0.17"
flate2 = "1.0"
tar = "0.4"
dialoguer = "0.11"
glob = "0.3"
dirs = "5.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
chrono = "0.4"
